alpine/Dockerfile: chmod +x docker-entrypoint.sh, or permission denied.
Signed-off-by: Heðin Ejdesgaard <hej@ejdesgaard.fo>

--- a/scripts/docker/alpine/Dockerfile
+++ b/scripts/docker/alpine/Dockerfile
@@ -77,6 +77,8 @@ RUN apk update \
 
 COPY docker-entrypoint.sh /
 
+RUN chmod +x docker-entrypoint.sh
+
 EXPOSE 1812/udp 1813/udp
 ENTRYPOINT ["/docker-entrypoint.sh"]
 CMD ["radiusd"]
