docker: ensure entrypoint is executable
fixes #4464

--- a/scripts/docker/centos8/Dockerfile
+++ b/scripts/docker/centos8/Dockerfile
@@ -97,6 +97,7 @@ gpgkey=file:///etc/pki/rpm-gpg/RPM-GPG-KEY-LTB-project'\
     && yum install -y /tmp/*.rpm
 
 COPY docker-entrypoint.sh /
+RUN chmod +x /docker-entrypoint.sh
 
 EXPOSE 1812/udp 1813/udp
 ENTRYPOINT ["/docker-entrypoint.sh"]
