--- a/scripts/docker/rocky8/Dockerfile
+++ b/scripts/docker/rocky8/Dockerfile
@@ -96,6 +96,7 @@ gpgkey=file:///etc/pki/rpm-gpg/RPM-GPG-KEY-LTB-project'\
 RUN yum install -y /tmp/*.rpm
 
 COPY docker-entrypoint.sh /
+RUN chmod +x /docker-entrypoint.sh
 
 EXPOSE 1812/udp 1813/udp
 ENTRYPOINT ["/docker-entrypoint.sh"]
