--- a/scripts/docker/ubuntu20/Dockerfile
+++ b/scripts/docker/ubuntu20/Dockerfile
@@ -54,6 +54,7 @@ RUN apt-get update \
     && ln -s /etc/freeradius /etc/raddb
 
 COPY docker-entrypoint.sh /
+RUN chmod +x /docker-entrypoint.sh
 
 EXPOSE 1812/udp 1813/udp
 ENTRYPOINT ["/docker-entrypoint.sh"]
