Correct test for open sessions in radacct for MS SQL
Schema contraints mean AcctStopTime will never be NULL

--- a/raddb/mods-config/sql/main/mssql/queries.conf
+++ b/raddb/mods-config/sql/main/mssql/queries.conf
@@ -246,7 +246,7 @@ accounting {
 					AND NASIPAddress = '%{%{NAS-IPv6-Address}:-%{NAS-IP-Address}}' \
 					AND NASPortId = '%{%{NAS-Port-ID}:-%{NAS-Port}}' \
 					AND NASPortType = '%{NAS-Port-Type}' \
-					AND AcctStopTime IS NULL"
+					AND AcctStopTime = 0"
 		}
 
 		start {
@@ -336,7 +336,7 @@ accounting {
 					AND NASIPAddress = '%{%{NAS-IPv6-Address}:-%{NAS-IP-Address}}' \
 					AND NASPortId = '%{%{NAS-Port-ID}:-%{NAS-Port}}' \
 					AND NASPortType = '%{NAS-Port-Type}' \
-					AND AcctStopTime IS NULL"
+					AND AcctStopTime = 0"
 
 			query = "\
 				UPDATE ${....acct_table1} \
@@ -448,7 +448,7 @@ accounting {
 					AND NASIPAddress = '%{%{NAS-IPv6-Address}:-%{NAS-IP-Address}}' \
 					AND NASPortId = '%{%{NAS-Port-ID}:-%{NAS-Port}}' \
 					AND NASPortType = '%{NAS-Port-Type}' \
-					AND AcctStopTime IS NULL"
+					AND AcctStopTime = 0"
 		}
 
 		stop {
@@ -556,7 +556,7 @@ accounting {
 				AND NASIPAddress = '%{%{NAS-IPv6-Address}:-%{NAS-IP-Address}}' \
 				AND NASPortId = '%{%{NAS-Port-ID}:-%{NAS-Port}}' \
 				AND NASPortType = '%{NAS-Port-Type}' \
-				AND AcctStopTime IS NULL"
+				AND AcctStopTime = 0"
 		}
 
 		#
