Add simultaneous use queries for MS SQL

--- a/raddb/mods-config/sql/main/mssql/queries.conf
+++ b/raddb/mods-config/sql/main/mssql/queries.conf
@@ -102,6 +102,32 @@ group_membership_query = "\
 	ORDER BY priority"
 
 #######################################################################
+#  Simultaneous Use Checking Queries
+#######################################################################
+#  simul_count_query	- query for the number of current connections
+#			- If this is not defined, no simultaneous use checking
+#			- will be performed by this module instance
+#  simul_verify_query	- query to return details of current connections
+#				for verification
+#			- Leave blank or commented out to disable verification step
+#			- Note that the returned field order should not be changed.
+#######################################################################
+
+simul_count_query = "\
+	SELECT COUNT(*) \
+	FROM ${acct_table1} \
+	WHERE UserName = '%{SQL-User-Name}' \
+	AND AcctStopTime = 0"
+
+simul_verify_query = "\
+	SELECT \
+		RadAcctId, AcctSessionId, UserName, NASIPAddress, NASPortId, FramedIPAddress, \
+		CallingStationId, FramedProtocol \
+	FROM ${acct_table1} \
+	WHERE UserName = '%{SQL-User-Name}' \
+	AND AcctStopTime = 0"
+
+#######################################################################
 # Accounting and Post-Auth Queries
 #######################################################################
 # These queries insert/update accounting and authentication records.
