--- a/Make.inc.in
+++ b/Make.inc.in
@@ -181,7 +181,7 @@ ANALYZE.c       := @clang_path@
 #  Have wrappers for the test tools, so that they run.
 #
 TEST_BIN_DIR = ./$(BUILD_DIR)/bin/local
-TEST_BIN    =  $(JLIBTOOL) --quiet --mode=execute $(TEST_BIN_DIR)
+TEST_BIN    =  $(JLIBTOOL) $(if ${VERBOSE},--debug,--silent) --mode=execute $(TEST_BIN_DIR)
 
 #
 #  For creating documentation via doc/all.mk
