--- a/debian/rules
+++ b/debian/rules
@@ -58,9 +58,9 @@ endif
 
 # Add dependency on distribution specific version of openssl that fixes Heartbleed (CVE-2014-0160).
 ifeq ($(shell dpkg-vendor --derives-from Ubuntu && echo yes),yes)
-       SUBSTVARS = -Vdist:Depends="libssl1.0.0 (>= 1.0.1f-1ubuntu2) | libssl1.1"
+       SUBSTVARS = -Vdist:Depends="libssl1.0.0 (>= 1.0.2) | libssl1.1 | libssl3"
 else
-       SUBSTVARS = -Vdist:Depends="libssl1.0.0 (>= 1.0.1e-2+deb7u5) | libssl1.0.2 | libssl1.1"
+       SUBSTVARS = -Vdist:Depends="libssl1.0.0 (>= 1.0.2) | libssl1.0.2 | libssl1.1 | libssl3"
 endif
 
 # Add libsystemd-dev as a Build-Depends to debian/control if it is known to this system
