--- a/raddb/radiusd.conf.in
+++ b/raddb/radiusd.conf.in
@@ -267,7 +267,7 @@ log {
 	#
 	#  colourise:: Highlight important messages sent to stderr and stdout.
 	#
-	#  Option will be ignored (disabled) if output if `TERM` is not
+	#  Option will be ignored (disabled) if output of `TERM` is not
 	#  an xterm or output is not to a TTY.
 	#
 	colourise = yes
