New optional lightweight Acct-On/Off strategy with helper SP and view
Currently supported by MySQL, PostgreSQL and SQLite.

--- a/raddb/mods-config/sql/main/postgresql/queries.conf
+++ b/raddb/mods-config/sql/main/postgresql/queries.conf
@@ -232,17 +232,21 @@ authorize_group_reply_query = "\
 #######################################################################
 
 simul_count_query = "\
-	SELECT COUNT(*) \
-	FROM ${acct_table1} \
+	SELECT COUNT(RadAcctId) \
+	FROM ${acct_table1} a \
+	LEFT OUTER JOIN nasreload n USING (NASIPAddress) \
 	WHERE UserName='%{SQL-User-Name}' \
-	AND AcctStopTime IS NULL"
+	AND AcctStopTime IS NULL \
+	AND (a.AcctStartTime > n.ReloadTime OR n.ReloadTime IS NULL)"
 
 simul_verify_query = "\
 	SELECT RadAcctId, AcctSessionId, UserName, NASIPAddress, NASPortId, FramedIPAddress, CallingStationId, \
 		FramedProtocol \
-	FROM ${acct_table1} \
+	FROM ${acct_table1} a \
+	LEFT OUTER JOIN nasreload n USING (nasipaddress) \
 	WHERE UserName='%{SQL-User-Name}' \
-	AND AcctStopTime IS NULL"
+	AND AcctStopTime IS NULL \
+	AND (a.AcctStartTime > n.reloadtime OR n.reloadtime IS NULL)"
 
 #######################################################################
 # Group Membership Queries
@@ -314,7 +318,21 @@ accounting {
 		${..class.column_name}"
 
 	type {
+
 		accounting-on {
+
+			#
+			#  "Bulk update" Accounting-On/Off strategy.
+			#
+			#  Immediately terminate all sessions associated with a
+			#  given NAS.
+			#
+			#  Note: If a large number of sessions require closing
+			#  then the bulk update may be take a long time to run
+			#  and lock an excessive number of rows. See the
+			#  strategy below for an alternative approach that does
+			#  not touch the radacct session data.
+			#
 			query = "\
 				UPDATE ${....acct_table1} \
 				SET \
@@ -325,6 +343,31 @@ accounting {
 				WHERE AcctStopTime IS NULL \
 				AND NASIPAddress= '%{%{NAS-IPv6-Address}:-%{NAS-IP-Address}}' \
 				AND AcctStartTime <= ${....event_timestamp}"
+
+			#
+			#  "Lightweight" Accounting-On/Off strategy.
+			#
+			#  Record the reload time of the NAS and let the
+			#  administrator actually close the sessions in radacct
+			#  out-of-band, if desired.
+			#
+			#  Implementation advice, together with a stored
+			#  procedure for closing sessions and a view showing
+			#  the effective stop time of each session is provided
+			#  in process-radacct.sql.
+			#
+			#  To enable this strategy, just change the previous
+			#  query to "-query", and this one to "query".  The
+			#  previous one will be ignored, and this one will be
+			#  enabled.
+			#
+			-query = "\
+				INSERT INTO nasreload (NASIPAddress, ReloadTime) \
+				VALUES ('%{NAS-IP-Address}', ${....event_timestamp}) \
+				ON CONFLICT ON (NASIPAddress) \
+				DO UPDATE SET \
+					ReloadTime = ${....event_timestamp}"
+
 		}
 
 		accounting-off {
