--- a/raddb/mods-config/sql/main/sqlite/queries.conf
+++ b/raddb/mods-config/sql/main/sqlite/queries.conf
@@ -213,16 +213,20 @@ authorize_group_reply_query = "\
 
 simul_count_query = "\
 	SELECT COUNT(*) \
-	FROM ${acct_table1} \
+	FROM ${acct_table1} a \
+	LEFT OUTER JOIN nasreload n USING (nasipaddress) \
 	WHERE username = '%{SQL-User-Name}' \
-	AND acctstoptime IS NULL"
+	AND acctstoptime IS NULL \
+	AND (a.acctstarttime > n.reloadtime OR n.reloadtime IS NULL)"
 
 simul_verify_query = "\
 	SELECT radacctid, acctsessionid, username, nasipaddress, nasportid, framedipaddress, \
 		callingstationid, framedprotocol \
-	FROM ${acct_table1} \
+	FROM ${acct_table1} a \
+	LEFT OUTER JOIN nasreload n USING (nasipaddress) \
 	WHERE username = '%{${group_attribute}}' \
-	AND acctstoptime IS NULL"
+	AND acctstoptime IS NULL \
+	AND (a.acctstarttime > n.reloadtime OR n.reloadtime IS NULL)"
 
 #######################################################################
 # Accounting and Post-Auth Queries
@@ -275,8 +279,18 @@ accounting {
 
 	type {
 		accounting-on {
+
 			#
-			#  Bulk terminate all sessions associated with a given NAS
+			#  "Bulk update" Accounting-On/Off strategy.
+			#
+			#  Immediately terminate all sessions associated with a
+			#  given NAS.
+			#
+			#  Note: If a large number of sessions require closing
+			#  then the bulk update may be take a long time to run
+			#  and lock an excessive number of rows. See the
+			#  strategy below for an alternative approach that does
+			#  not touch the radacct session data.
 			#
 			query = "\
 				UPDATE ${....acct_table1} \
@@ -289,6 +303,28 @@ accounting {
 				WHERE acctstoptime IS NULL \
 				AND nasipaddress = '%{NAS-IP-Address}' \
 				AND acctstarttime <= ${....event_timestamp}"
+
+			#
+			#  "Lightweight" Accounting-On/Off strategy.
+			#
+			#  Record the reload time of the NAS and let the
+			#  administrator actually close the sessions in radacct
+			#  out-of-band, if desired.
+			#
+			#  Implementation advice, together with a stored
+			#  procedure for closing sessions and a view showing
+			#  the effective stop time of each session is provided
+			#  in process-radacct.sql.
+			#
+			#  To enable this strategy, just change the previous
+			#  query to "-query", and this one to "query".  The
+			#  previous one will be ignored, and this one will be
+			#  enabled.
+			#
+			-query = "\
+				INSERT OR REPLACE INTO nasreload (nasipaddress, reloadtime) \
+				VALUES ('%{NAS-IP-Address}', ${....event_timestamp})"
+
 		}
 
 		accounting-off {
