--- a/raddb/mods-config/sql/main/mysql/queries.conf
+++ b/raddb/mods-config/sql/main/mysql/queries.conf
@@ -226,21 +226,30 @@ authorize_group_reply_query = "\
 #				for verification
 #			- Leave blank or commented out to disable verification step
 #			- Note that the returned field order should not be changed.
+#
+# Note: Sessions that started prior to the most recent reload of their NAS will
+# be correctly considered inactive, even if the radacct entry itself is not
+# marked as stopped.
+#
 #######################################################################
 
 simul_count_query = "\
 	SELECT COUNT(*) \
-	FROM ${acct_table1} \
+	FROM ${acct_table1} a \
+	LEFT OUTER JOIN nasreload n USING (nasipaddress) \
 	WHERE username = '%{SQL-User-Name}' \
-	AND acctstoptime IS NULL"
+	AND acctstoptime IS NULL \
+	AND (a.acctstarttime > n.reloadtime OR n.reloadtime IS NULL)"
 
 simul_verify_query = "\
 	SELECT \
 		radacctid, acctsessionid, username, nasipaddress, nasportid, framedipaddress, \
 		callingstationid, framedprotocol \
-	FROM ${acct_table1} \
+	FROM ${acct_table1} a \
+	LEFT OUTER JOIN nasreload n USING (nasipaddress) \
 	WHERE username = '%{SQL-User-Name}' \
-	AND acctstoptime IS NULL"
+	AND acctstoptime IS NULL \
+	AND (a.acctstarttime > n.reloadtime OR n.reloadtime IS NULL)"
 
 #######################################################################
 # Accounting and Post-Auth Queries
@@ -275,8 +284,18 @@ accounting {
 
 	type {
 		accounting-on {
+
 			#
-			#  Bulk terminate all sessions associated with a given NAS
+			#  "Bulk update" Accounting-On/Off strategy.
+			#
+			#  Immediately terminate all sessions associated with a
+			#  given NAS.
+			#
+			#  Note: If a large number of sessions require closing
+			#  then the bulk update may be take a long time to run
+			#  and lock an excessive number of rows. See the
+			#  strategy below for an alternative approach that does
+			#  not touch the radacct session data.
 			#
 			query = "\
 				UPDATE ${....acct_table1} \
@@ -288,6 +307,31 @@ accounting {
 				WHERE acctstoptime IS NULL \
 				AND nasipaddress   = '%{NAS-IP-Address}' \
 				AND acctstarttime <= ${....event_timestamp}"
+
+			#
+			#  "Lightweight" Accounting-On/Off strategy.
+			#
+			#  Record the reload time of the NAS and let the
+			#  administrator actually close the sessions in radacct
+			#  out-of-band, if desired.
+			#
+			#  Implementation advice, together with a stored
+			#  procedure for closing sessions and a view showing
+			#  the effective stop time of each session is provided
+			#  in process-radacct.sql.
+			#
+			#  To enable this strategy, just change the previous
+			#  query to "-query", and this one to "query".  The
+			#  previous one will be ignored, and this one will be
+			#  enabled.
+			#
+			-query = "\
+				INSERT INTO nasreload \
+				SET \
+					nasipaddress = '%{NAS-IP-Address}', \
+					reloadtime = ${....event_timestamp} \
+				ON DUPLICATE KEY UPDATE reloadtime = ${....event_timestamp}"
+
 		}
 
 		accounting-off {
