update comments and docs

--- a/raddb/proxy.conf
+++ b/raddb/proxy.conf
@@ -83,9 +83,20 @@ proxy server {
 	#  file in the directory should be a normal "home_server"
 	#  definitions.  This directory does not exist by default.
 	#
-	#  e.g: The content of ${raddbdir}/home_servers/example.com should be:
+	#  e.g: The content of home_servers/example.com should be
+	#  a home server definition.
+	#
+	#  The name of the home server MUST be the same as the
+	#  filename.
+	#
+	#  Each home server must be set to only one type.  e.g.
+	#  "type = auth", and not "type = auth+acct"
+	#
+	#  For example:
 	#
 	#	home_server example.com {
+	#		type = auth
+	#		ipaddr = ...
 	#		...
 	#	}
 	#
@@ -93,7 +104,7 @@ proxy server {
 	#
 	#	doc/configuration/dynamic_home_servers.md
 	#
-#	directory = ${raddbdir}/home_servers
+#	directory = ${confdir}/home_servers
 
 }
 
