rlm_couchbase: Update to latest libcouchbase3.3.x
* Add support for libcouchbase3.3.x
* Drop use of libfreeradius deprecated functions.

--- a/src/modules/rlm_couchbase/all.mk.in
+++ b/src/modules/rlm_couchbase/all.mk.in
@@ -3,25 +3,16 @@
 #  target may stick around.
 TARGETNAME	:=
 -include $(top_builddir)/src/lib/json/all.mk
-TARGET		:=
 
-#  Check the targetname defined by libfreeradius-json.mk
-#  to verify we have json-c and the libfreeradius-json library.
+#  Add libfreeradius-json to the prereqs (so rlm_rest links to it)
 ifneq "$(TARGETNAME)" ""
-  TARGETNAME	:= @targetname@
-
-  #  Check the targetname from the local configure script
-  ifneq "$(TARGETNAME)" ""
-    TARGET		:= $(TARGETNAME)$(L)
-  endif
+TGT_PREREQS := libfreeradius-json$(L)
+TARGETNAME  := @targetname@
+TARGET      := $(TARGETNAME)$(L)
 endif
 
-SOURCES		:= $(TARGETNAME).c mod.c couchbase.c
+SRC_CFLAGS  := @mod_cflags@
+TGT_LDLIBS  := @mod_ldflags@
 
-SRC_CFLAGS	:= @mod_cflags@
-TGT_LDLIBS	:= @mod_ldflags@
-TGT_PREREQS	:= libfreeradius-json.a
-
-# TODO: create man page
-#MAN		:= rlm_couchbase.8
-LOG_ID_LIB	= 7
+SOURCES     := $(TARGETNAME).c mod.c couchbase.c
+LOG_ID_LIB  = 7
